# synth_green

./: .gitignore  README.md  build.py  makefile  pyproject.toml  setup.sh
docs/source/releases/: index.rst  v1_12_0.rst  v1_12_1.rst
docs/source/releases/latest/: 3-add-disclaimer-to-readme.yaml
docs/source/synth_green_api/: index.rst
src/: makefile  synth_green.f90
synth_green/: __init__.py
tests/: test_all.sh
